--- a/app/views/user_mailer/restore_password.html.erb
+++ b/app/views/user_mailer/restore_password.html.erb
@@ -57,7 +57,9 @@
     <h2>Hola <%= @user.username %>,</h2>
     <p>Recibes este correo electrónico porque has solicitado restablecer la contraseña de tu cuenta en Readme.</p>
     <p>Utiliza el siguiente código para restablecer tu contraseña:</p>
-    <div class="reset-code"><%= @reset_code %></div>
+    <div class="reset-code">
+      <a href="https://test--readme-test.netlify.app/auth/reset_password/<%= @reset_code %>" style="color: #fff"> Haz Click Aqui para restaurar tu contraseña </a>
+    </div>
     <p class="message">Si no solicitaste este cambio, simplemente ignora este mensaje y tu contraseña permanecerá sin cambios.</p>
   </div>
   <div class="footer">
