SCRUM-140 Agregado .env y actualizado todas las variables de entorno en este .env

--- a/app/views/user_mailer/email_confirmation.html.erb
+++ b/app/views/user_mailer/email_confirmation.html.erb
@@ -58,7 +58,7 @@
     <h2>¡Bienvenido <%= @user.username %> a Readme!</h2>
     <p>Para completar tu registro, por favor confirma tu correo electrónico utilizando el siguiente código:
     <div class="confirmation-code">
-      <a href="https://test--readme-test.netlify.app/auth/email_confirmation/<%= @code %>" style="color: #fff"> Haz Click en este enlace para confirmar tu email </a>
+      <a href="<%=ENV["FRONT_URL"]%>/auth/email_confirmation/<%= @code %>" style="color: #fff"> Haz Click en este enlace para confirmar tu email </a>
     </div>
     <!--<div class="confirmation-code"> <%#= @code %> </div>-->
     <p class="message">¡Gracias por unirte a nuestra comunidad de lectores!</p>
